--- a/photos.html
+++ b/photos.html
@@ -2,10 +2,11 @@
 
 <html lang="en">
 <head>
-  <title>Cookie Clicker</title>
+  <title>Soylent Green Fine Cuisine - Photos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <meta name="Cookie Clicker" content="Solyent green">
+  <meta name="Solyent Green Fine Cuisine®" content="Solyent Green">
+  <link href="https://fonts.googleapis.com/css?family=Archivo&#124;Playfair+Display" rel="stylesheet">
   <!--favicon -->
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -22,23 +23,101 @@
 </head>
 
 <body>
-  <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </p>
+
+  <!-- navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top border-bottom">
+    <div class="container">
+      <a class="navbar-brand" href="#">Solyent Green Menu</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">| Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carte.html">| La carte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="photos.html">| Photos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="restaurants.html">| Restaurants</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">| Contact</a>
+          </li>
+      </div>
+    </div>
+  </nav>
+
+  <!-- splash -->
+  <div class="jumbotron jumbotron-fluid splash">
+    <div class="container">
+      <div class="row">
+        <div class="col-6"><img src="assets/img/splash.jpg" alt="Welcome to Solyent Green Fine Cuisine®" class="splash"/>
+        </div>
+        <div class="col-2 offset-sm-1"><img src="assets/img/tree.png" alt="tree" class="splashtree" /></div>
+        <div class="col-2"><img src="assets/img/tree.png" alt="tree2" class="splashtree2" /></div>
+        <div class="col-1"><img src="assets/img/tree.png" alt="tree3" class="splashtree3" /></div>
+      </div>
+    </div>
   </div>
+
   <!-- main -->
   <main>
-    <p>
-      photos here
-    </p>
+
+<!--photos -->
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
+        </div>
+      </div>
+    </div>
+
   </main>
 
-</div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
