--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       <div class="row">
         <div class="col-6"><img src="assets/img/splash.jpg" alt="Welcome to Solyent Green Fine Cuisine®" class="splash"/>
         </div>
-        <div class="col-6"><img src="assets/img/tree.png" alt="tree" class="splashtree" /></div>
+        <div class="col-2 offset-sm-1"><img src="assets/img/tree.png" alt="tree" class="splashtree" /></div>
+        <div class="col-2"><img src="assets/img/tree.png" alt="tree2" class="splashtree2" /></div>
+        <div class="col-1"><img src="assets/img/tree.png" alt="tree3" class="splashtree3" /></div>
       </div>
     </div>
   </div>
@@ -70,255 +72,18 @@
       <h1>A place for true gourmets</h1>
       <div class="row bg-light">
         <div class="col-10 offset-sm-1">
-          <p>Bonjour, <span id="promptname">%name</span></p>
+          <p>Bonjour, <span id="promptname"></span></p>
           <p>Alii summum decus in carruchis solito altioribus et ambitioso vestium cultu ponentes sudant sub ponderibus lacernarum, quas in collis insertas cingulis ipsis adnectunt nimia subtegminum tenuitate perflabiles, expandentes eas crebris agitationibus maximeque sinistra, ut longiores fimbriae tunicaeque perspicue luceant varietate liciorum effigiatae in species animalium multiformes.</p>
         </div>
       </div>
       <hr class="my-4">
 
-<!-- carte -->
-<div class="row">
-  <div class="col-4">
-    <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">menu1</a>
-      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">menu2</a>
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Entrées</a>
-      <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Plats</a>
-    </div>
-  </div>
-  <div class="col-8">
-    <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-        <div class="carte">
-          <div class="center">
-            <h4>Menu uno <i class='fas fa-beer fa-sm'></i><span class="badge badge-warning">PROMO</span></h4>
-          </div>
-          <hr class="my-4 light">
-          <ul>
-            <li>
-              <p>Tapenade à la mode de Fukushima</p>
-            </li>
-            <li>
-              <p>Tartuffata verde al'ogm</p>
-            </li>
-            <li>
-              <p>Poulet fermier sauce Brawndo</p>
-            </li>
-            <li>
-              <p>Insectes de saison</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-        <div class="carte">
-          <div class="center">
-            <h4>Menu due <i class='fas fa-glass-cheers'></i><span class="badge badge-primary">BEST VALUE</span></h4>
-          </div>
-          <hr class="my-4 light">
-          <ul>
-            <li>
-              <p>Scarmoza de spiruline servi sur poële</p>
-            </li>
-            <li>
-              <p>Tartuffata verde al'ogm</p>
-            </li>
-            <li>
-              <p>Poulet fermier sauce Brawndo</p>
-            </li>
-            <li>
-              <p>Insectes de saison</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-        <div class="carte">
-          <div class="center">
-            <h4>Entrées <i class="fas fa-seedling"></i></h4>
-          </div>
-          <hr class="my-4 light">
-          <ul>
-            <li>
-              <p>Tapenade à la mode de Fukushima <span class="badge badge-pill badge-success">150d$</span></p>
-            </li>
-            <li>
-              <p>Tartuffata verde al'ogm <span class="badge badge-pill badge-success">150d$</span></p>
-            </li>
-            <li>
-              <p>Poulet fermier sauce Brawndo <span class="badge badge-pill badge-success">150d$</span></p>
-            </li>
-            <li>
-              <p>Insectes de saison <span class="badge badge-pill badge-success">200d$</span></p>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
-        <div class="carte">
-          <div class="center">
-            <h4>Plats <i class="fas fa-seedling"></i></h4>
-          </div>
-          <hr class="my-4 light">
-          <ul>
-            <li>
-              <p>Tapenade à la mode de Fukushima <span class="badge badge-pill badge-success">200d$</span></p>
-            </li>
-            <li>
-              <p>Tartuffata verde al'ogm <span class="badge badge-pill badge-success">250d$</span></p>
-            </li>
-            <li>
-              <p>Poulet fermier sauce Brawndo <span class="badge badge-pill badge-success">300d$</span></p>
-            </li>
-            <li>
-              <p>Insectes de saison <span class="badge badge-pill badge-success">100d$</span></p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  </main>
 
-<!--photos -->
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
-      </div>
-    </div>
-  </div>
-
-<!-- maps & infos -->
-  <p>Nous sommes le <span id="myDate">date et heure</span>, nos restaurants sont donc <span class="openClosed">ouverts / fermés</span>.</p>
-  <h2>Resto 1</h2>
-  <h3>Where?</h3>
-  <p>
-    Mulholland Drive 66, Los Angeles, USA.
-  </p>
-  <h3>When?</h3>
-  <p>
-    Tuesday to Saturday: from 12:00 to 23:00
-  </p>
-  <div style="width: 100%"><iframe width="100%" height="350" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=mulholland%20drive%2C%20california+(Soylent%20Green%20Fine%20Cuisine)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Draw map route</a></iframe></div><br />
-  <h2>Resto 2</h2>
-  <h3>Where?</h3>
-  <p>
-    Madison Square Park <br />
-11 Madison Ave, New York, NY 10010, USA
-  </p>
-  <h3>When?</h3>
-  <p>
-    Tuesday to Saturday: from 12:00 to 23:00
-  </p>
-  <div style="width: 100%"><iframe width="100%" height="350" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=madison%20square%20park%20NYC+(Soylent%20Green%20Fine%20Cuisine)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Map a route</a></iframe></div><br />
-  <h2>Resto 3</h2>
-  <h3>Where?</h3>
-  <p>Long Island City, Building 7 <br />
-Queens, NY, USA
-  </p>
-  <h3>When?</h3>
-  <p>
-    Tuesday to Saturday: from 12:00 to 23:00
-  </p>
-  <div style="width: 100%"><iframe width="100%" height="350" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=long%20island%20city%20nyc+(Soylent%20Green%20Fine%20Cuisine)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.maps.ie/map-my-route/">Create a route on google maps</a></iframe></div><br />
-<!-- forms -->
-<form name="SoylentForm">
-  <div class="form-group row">
-  <label for="SoylentForm" class="col-12"><h2>Contactez nous entre deux bouchées croustillantes !</h2></label>
-  </div>
-  <div class="form-group row">
-    <label for="inputUsername3" class="col-sm-2 col-form-label">Nom</label>
-    <div class="col-sm-6">
-      <input type="name" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Nom">
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputFirstname3" class="col-sm-2 col-form-label">Prénom</label>
-    <div class="col-12 col-sm-6">
-      <input type="email" class="form-control" id="inputFirstname3" placeholder="Prénom">
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">E-mail</label>
-    <div class="col-12 col-sm-6">
-      <div class="input-group-prepend">
-        <div class="input-group-text">@</div>
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-      </div>
-    </div>
-  </div>
-  <div class="form-group row">
-    <div class="col-12 col-sm-8">
-  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Objet du message</label>
-   <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-     <option selected>Vous nous contactez pour</option>
-     <option value="1">Effectuer une réservation</option>
-     <option value="2">Chanter nos louanges</option>
-     <option value="3">Faire une donation de corps anonyme</option>
-     <option value="4">La réponse D</option>
-   </select>
-   </div>
-  </div>
-  <div class="form-group row">
-    <div class="col-12 col-sm-8">
-      <label for="exampleFormControlTextarea1">Votre message</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-    </div>
-  </div>
-  <div class="form-group row">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary">
-        <i class="far fa-envelope"> Envoyer</i>
-      </button>
-    </div>
-  </div>
-</form>
-
-</main>
-
-</div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="assets/js/prompt.js"></script>
   <script src="assets/js/scripts.js"></script>
-  </body>
+</body>
 </html>
