visual consistency updates + alt lables & title + intro text

--- a/index.html
+++ b/index.html
@@ -70,10 +70,19 @@
   <main>
     <div class="container">
       <h1>A place for true gourmets</h1>
-      <div class="row bg-light">
-        <div class="col-10 offset-sm-1">
+      <div class="row">
+        <div class="col-10">
+          <p></p>
           <p>Bonjour, <span id="promptname"></span></p>
-          <p>Alii summum decus in carruchis solito altioribus et ambitioso vestium cultu ponentes sudant sub ponderibus lacernarum, quas in collis insertas cingulis ipsis adnectunt nimia subtegminum tenuitate perflabiles, expandentes eas crebris agitationibus maximeque sinistra, ut longiores fimbriae tunicaeque perspicue luceant varietate liciorum effigiatae in species animalium multiformes.</p>
+          <p>Vous ne vous êtes pas trompés en venant chez Soylent Green Fine Cuisine®.</p><h4>Une cuisine par les humains, pour les humains.</h4><p>Soylent Yellow et Red ont satisfait votre appétit durant de longues années, mais en tant qu'homme ou femme de culture, vous comprenez que Green est la nouvelle frontière gatronomique à explorer. Nos produits sont garantis sans gluten et leur empreinte carbone est négative grâce à nos méthodes brevetées de recyclage, souvent imitées, jamais égalées. Profitez de cet inimitable petit goût de poulet.</p>
+          <p>Goutez à nos :</p>
+          <ul>
+            <li>Smoothies sans OGM</li>
+            <li>bouchées à la farce secrète</li>
+            <li>pains verts sans céréales</li>
+            <li>Curry vert au goût de poulet</li>
+          </ul>
+          <p>et davantage de délicatesses qui flattent le palais humain ! <a href= contact.html>Réservez dès à présent !</a></p>
         </div>
       </div>
       <hr class="my-4">
