--- a/photos.html
+++ b/photos.html
@@ -70,48 +70,47 @@
   <main>
 
 <!--photos -->
-
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/green food smoothie__720.jpg" alt="soylent green non-GMO smoothie" title="soylent green non-GMO smoothie" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/Green-Bread.jpg" alt="soylent green special bread with a secret cereal" alt="soylent green special bread with a secret cereal" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/images3.jpg" alt="soylent green bun with secret farce" title="soylent green bun with secret farce" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="soylent green curry, tastes like chicken" title="soylent green curry, tastes like chicken" class="img-fluid rounded"/>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/green food smoothie__720.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/Green-Bread.jpg" alt="soylent green special bread with a secret cereal" title="soylent green special bread with a secret cereal" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/Green-Bread.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/green food smoothie__720.jpg" alt="soylent green non-GMO smoothie" title="soylent green non-GMO smoothie" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/images3.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="soylent green curry, tastes like chicken" title="soylent green curry, tastes like chicken" class="img-fluid rounded"/>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="" class="img-fluid rounded"/>
+          <img src="assets/img/images3.jpg" alt="soylent green bun with secret farce" title="soylent green bun with secret farce" class="img-fluid rounded"/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" alt="soylent green curry, tastes like chicken" src="assets/img/thai-green-chicken-curry-recipe-100317.jpg" title="soylent green curry, tastes like chicken" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/Green-Bread.jpg" alt="soylent green special bread with a secret cereal" title="soylent green special bread with a secret cereal" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/images3.jpg" alt="soylent green bun with secret farce" title="soylent green bun with secret farce" class="img-fluid rounded"/>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="assets/img/green food smoothie__720.jpg" alt="soylent green non-GMO smoothie" title="soylent green non-GMO smoothie" class="img-fluid rounded"/>
         </div>
       </div>
     </div>
